@@ -1,3 +1,7 @@
+* Sat  9 May 2009 15:58:36 CEST
+Fixed bugs with the query processing in the standalone driver;
+Added INSERT and UPDATE methods in the activerecord connector.
+
 * Thu  7 May 2009 17:03:01 CEST
 
 Added a check against the protocol version during authentication;
